--- a/markup/includes/property-listing.html
+++ b/markup/includes/property-listing.html
@@ -92,6 +92,9 @@
             </form>
         </div>
         <div class="table-responsive">
+            <ul class="quick-links">
+                <li><a href="#" class="delete"><span class="icon-bin"></span>Delete</a></li>
+            </ul>
             <ul class="properties-table accordion">
                 <li>
                     <div class="t-head by-id">
