--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -518,7 +518,7 @@ a{ outline: none;}
 	padding: 17px 10px;
 	border-left: 1px solid darken($mix-blue, 15%);
 
-	@include media('<tablet'){
+	@include media('<=desktop'){
 		display: none;
 	}
 
@@ -953,6 +953,8 @@ a{ outline: none;}
 	@include media('<tablet'){
 		padding: 30px 0;
 		@include align-reset(top,12,15);
+		max-width: 300px;
+		margin: 0 auto;
 	}
 	
 	li {
@@ -960,6 +962,10 @@ a{ outline: none;}
 		margin: 0 0 5px;
 		position: relative;
 		
+		@include media('<tablet'){
+			display: block;
+		}
+
 		b {
 			color: $dove-black;
 		}
