--- a/markup/scss/_user-registeration.scss
+++ b/markup/scss/_user-registeration.scss
@@ -1,3 +1,4 @@
+.changePassword,
 .registrationFormHolder{
     overflow: hidden;
     padding: 20px;
@@ -14,6 +15,7 @@
         }
     }
 }
+.changePassword-form,
 .registration-form {
     background:rgba($index-white, 0.2);
     border-radius: 5px;
