--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -758,12 +758,60 @@ a{ outline: none;}
 		
 		li{
 			padding: 0 10px 10px;
+			position: relative;
 			
+			&.display-badge {
+				.badge {
+					opacity: 1;
+					visibility: visible;
+					z-index: 5;
+				}
+			}
+
 			a{
 				text-decoration: none;
 				color: $light-gray;
+				@include align-reset(middle,24,27);
 				
 				&:hover{ color: $white;}
+
+				span[class^="icon-"], span[class*="icon-"]{
+					position: relative;
+					z-index: 9;
+				}
+
+				.badge {
+					font-size: 11px !important;
+					line-height: 15px !important;
+					font-weight: 600;
+					text-align: center !important;
+					min-width: 28px;
+					max-width: 28px;
+					color: $white;
+					border-radius: 4px;
+					background: $red;
+					padding: 3px 0;
+					position: absolute;
+					top: -20px;
+					right: 4px;
+					opacity: 0;
+					visibility: hidden;
+					z-index: -1;
+					transition: opacity 0.4s ease, visibility 0.4s ease, z-index 0.4s ease;
+					-webkit-transition: opacity 0.4s ease, visibility 0.4s ease, z-index 0.4s ease;
+					-moz--webkit-transition: opacity 0.4s ease, visibility 0.4s ease, z-index 0.4s ease;
+					-ms--webkit-transition: opacity 0.4s ease, visibility 0.4s ease, z-index 0.4s ease;
+
+					&:after {
+						position: absolute;
+						bottom: -14px;
+						right: 3px;
+						border: 8px solid transparent;
+						border-top: 8px solid $red;
+						content: '';
+						border-left: 0;
+					}			
+				}
 			}
 		}
 	}
@@ -864,7 +912,7 @@ a{ outline: none;}
 					@include align(middle);
 					margin: -2px 10px 0 0;
 					&:before{
-						font-size: 22px;
+						font-size: 23px;
 						line-height: 1;
 						
 						@include media('<desktop'){
