--- a/markup/scss/base/_forms.scss
+++ b/markup/scss/base/_forms.scss
@@ -66,5 +66,6 @@ input[type='submit'] {
   -webkit-appearance: none;
   -webkit-border-radius: 0;
   cursor: pointer;
+  outline: none !important;
 }
 
