--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -403,8 +403,8 @@ th {
 
 @font-face {
   font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?lr79q7");
-  src: url("../fonts/icomoon.eot?lr79q7#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?lr79q7") format("truetype"), url("../fonts/icomoon.woff?lr79q7") format("woff"), url("../fonts/icomoon.svg?lr79q7#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?kbn8wj");
+  src: url("../fonts/icomoon.eot?kbn8wj#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?kbn8wj") format("truetype"), url("../fonts/icomoon.woff?kbn8wj") format("woff"), url("../fonts/icomoon.svg?kbn8wj#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -421,6 +421,10 @@ th {
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-refresh-arrow:before {
+  content: "\e930";
 }
 
 .icon-logout:before {
@@ -509,6 +513,10 @@ th {
 
 .icon-login:before {
   content: "\e918";
+}
+
+.icon-printer:before {
+  content: "\e954";
 }
 
 .icon-user-plus:before {
@@ -892,6 +900,7 @@ input[type='submit'] {
   -webkit-appearance: none;
   -webkit-border-radius: 0;
   cursor: pointer;
+  outline: none !important;
 }
 
 /*Add Agency User Form*/
@@ -3294,6 +3303,14 @@ input[type='submit'] {
 
 .property-listing-holder .properties-table li a.delete:hover {
   color: #bc1e1e;
+}
+
+.property-listing-holder .properties-table li a.undo {
+  color: #39f;
+}
+
+.property-listing-holder .properties-table li a.undo:hover {
+  color: #0073e6;
 }
 
 .property-listing-holder .properties-table li .slide {
