--- a/markup/includes/property-listing.html
+++ b/markup/includes/property-listing.html
@@ -65,7 +65,6 @@
                         </select>
                     </li>
                 </ul>
-                <input type="submit" value="Go">
             </form>
             <form class="by-id-sorting">
                 <ul>
@@ -88,7 +87,6 @@
                         </select>
                     </li>
                 </ul>
-                <input type="submit" value="Go">
             </form>
         </div>
         <div class="table-responsive">
@@ -124,6 +122,7 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -160,6 +159,7 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -196,6 +196,7 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -232,6 +233,7 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -268,6 +270,7 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -304,6 +307,7 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -340,6 +344,7 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -376,6 +381,7 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
@@ -412,6 +418,44 @@
                         <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
                         <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
                         <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
+                    </div>
+                    <div class="slide">
+                        <div class="two-cols">
+                            <div class="col">
+                                <h1>Owner info:</h1>
+                                <p><b>Owner Name:</b> Zain Zafar</p>
+                                <p><b>Owner Email:</b> zainzafar67@yahoo.com</p>
+                                <p><b>Owner Phone:</b> 03214567989</p>
+                                <p><b>Owner Fax:</b> 03214567989</p>
+                            </div>
+                            <div class="col">
+                                <h1>property title:</h1>
+                                <p>In magna eros, malesuada lacinia laoreet a</p>
+                                <h1>property description:</h1>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel lacus dolor. Duis sagittis lacus sed libero iaculis luctus. Pellentesque sit amet pretium justo. Ut dignissim, enim non semper tristique, purus ante venenatis eros, id dapibus mi arcu eget arcu. Donec malesuada sem dui, sed imperdiet urna luctus ut. Mauris venenatis vel enim ac porta. Suspendisse potenti. Donec et mauris vel eros tincidunt congue aliquam non nulla. Pellentesque interdum enim id metus elementum, ut gravida magna sodales. Nam viverra accumsan ex in faucibus.</p>
+                            </div>
+                        </div>
+                        <a class="btn-more">View more</a>
+                    </div>
+                </li>
+                <li class="accordion-row">
+                    <div class="t-data by-id">
+                        <input type="checkbox">
+                        <label for="id1">2806770 </label>
+                    </div>
+                    <div class="t-data by-type"><p>Res. Plot 2250 Sq. Ft.</p></div>
+                    <div class="t-data by-location"><p>Air Avenue - Block Q</p></div>
+                    <div class="t-data by-price"><p>10,000,000</p></div>
+                    <div class="t-data">
+                        <time datetime="2016-04-18">18 Apr 2016</time>
+                    </div>
+                    <div class="t-data by-view">55</div>
+                    <div class="t-data">
+                        <a class="details opener" title="Details"><span class="icon-notebook"></span></a>
+                        <a href="#" class="edit" title="Edit the property"><span class="icon-pencil"></span></a>
+                        <a class="delete" title="Delete the property"><span class="icon-trash"></span></a>
+                        <a href="#" class="undo" title="Restore property"><span class="icon-refresh-arrow"></span></a>
                     </div>
                     <div class="slide">
                         <div class="two-cols">
