--- a/markup/includes/user-update-page.html
+++ b/markup/includes/user-update-page.html
@@ -148,6 +148,41 @@
                 <span class="border"></span>
                 <span class="error-text">This is error</span>
             </div>
+            <div class="input-holder full-width no-indent">
+                <label for="search-society" class="icon-society"></label>
+                <input type="text" placeholder="Select Societies You Deal In:" id="search-society" name="SelectDealSociety" required>
+                <span class="border"></span>
+                <span class="error-text">This is error</span>
+                <span class="calculatedSocieties"></span>
+            </div>
+            <div class="input-holder full-width">
+                <ul class="societiesBlock-listing">
+                    <li>
+                        <input type="checkbox" id="society1" class="selectSociety-checkbox">
+                        <label for="society1">DHA</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="society2" class="selectSociety-checkbox">
+                        <label for="society2">Garden Town</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="society3" class="selectSociety-checkbox">
+                        <label for="society3">Model Town</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="society4" class="selectSociety-checkbox">
+                        <label for="society4">wapda Town</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="society5" class="selectSociety-checkbox">
+                        <label for="society5">Behria Town</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" id="society6" class="selectSociety-checkbox">
+                        <label for="society6">Alflah town</label>
+                    </li>
+                </ul>
+            </div>
             <h1> Agency Contact Details</h1>
             <div class="input-holder error">
                 <label for="compny-phone" class="icon-phone"></label>
