--- a/markup/scss/_user-registeration.scss
+++ b/markup/scss/_user-registeration.scss
@@ -105,32 +105,57 @@
             &.active {
                 &:after { right: 0;}
             }
+        }        
+    }
+    .societiesBlock-listing,
+    .role-listing {
+        @extend %listreset;
+        padding: 10px 0 0;
+        @include align-reset(top,16,19);
+        
+        @include media('<desktop'){
+            @include align-reset(top,13,15);
         }
-        
-        .role-listing {
-            @extend %listreset;
-            padding: 10px 0 0;
-            @include align-reset(top,16,19);
+    
+        li {
+            width: 33.33%;
+            overflow: hidden;
+            padding: 5px;
             
-            @include media('<desktop'){
-                @include align-reset(top,13,15);
+            @include media('<tablet'){
+                width: 100%;
             }
-        
-            li {
-                width: 33.33%;
-                overflow: hidden;
-                padding: 5px;
-                
-                @include media('<tablet'){
-                    width: 100%;
-                }
-                
-                label,
-                input[type="checkbox"] {
-                    @include align(middle);
-                    cursor: pointer;
-                }
+            
+            label,
+            input[type="checkbox"] {
+                @include align(middle);
+                cursor: pointer;
             }
+        }
+    }
+    .societiesBlock-listing {
+        padding: 0;
+        border-color: rgba($black, 0.2);
+        border-style: solid;
+        border-width: 0 1px 1px;
+        margin: -5px 0 0;
+        max-height: 200px;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+    .calculatedSocieties{
+        position: absolute;
+        top: 50%;
+        margin: -7px 0 0;
+        color: $defualt-blue;
+        font-weight: 600;
+        @include font(14,19);
+        right: 10px;
+        display: block;
+        max-width: 165px;
+
+        @include media('<tablet'){
+        @include font(12,15);
         }
     }
     
@@ -148,6 +173,10 @@
             overflow: hidden;
         }
         
+        &.no-indent {
+            margin: 0;
+        }
+
         &.onTop-mobile{
             @include media('<tablet'){
                 position: absolute;
@@ -202,6 +231,14 @@
             background: transparent;
             padding:6px 10px 6px 50px;
             
+            &#search-society{
+                padding:6px 170px 6px 50px;
+
+                @include media('<tablet'){
+                padding:6px 125px 6px 30px;
+                }
+            }
+
             @include media('<widescreen'){
                 @include font(15,23);
             }
@@ -310,41 +347,41 @@
             }
         }
     }
-        button[type="submit"]{
-            border: 0;
-            background: $mix-blue;
-            text-align: center;
-            color: $white;
-            font-weight: 600;
-            display: block;
-            width: 100%;
-            padding: 15px 20px;
-            border-radius: 2px;
-            @include font(20,24);
-            outline: none;
-            transition: background 0.4s ease;
-            
-            @include media('<tablet'){
-                @include font(16,19);
-                padding: 8px;
-            }
-            
-            [class^="icon-"], [class*="icon-"] {
-            @include align(middle);
-            margin: -2px 0 0;
-            position: relative;
-            right: 0;
-            transition: right 0.4s ease;
-            }
-            
-            &:hover{
+    button[type="submit"]{
+        border: 0;
+        background: $mix-blue;
+        text-align: center;
+        color: $white;
+        font-weight: 600;
+        display: block;
+        width: 100%;
+        padding: 15px 20px;
+        border-radius: 2px;
+        @include font(20,24);
+        outline: none;
+        transition: background 0.4s ease;
+        
+        @include media('<tablet'){
+            @include font(16,19);
+            padding: 8px;
+        }
+        
+        [class^="icon-"], [class*="icon-"] {
+        @include align(middle);
+        margin: -2px 0 0;
+        position: relative;
+        right: 0;
+        transition: right 0.4s ease;
+        }
+        
+        &:hover{
             background: darken( $mix-blue, 5%);
             
             [class^="icon-"], [class*="icon-"] {
                 right: -10px;
             }
-            }
         }
+    }
     .agent-check {
         float: left;
         margin: 25px 50px 0;
