--- a/markup/scss/_user-registeration.scss
+++ b/markup/scss/_user-registeration.scss
@@ -142,6 +142,25 @@
         max-height: 200px;
         overflow-y: auto;
         overflow-x: hidden;
+
+        li {
+        overflow: hidden;
+        cursor: pointer;
+        
+        &:hover {
+            background: $index-white;
+        }
+
+        input[type="checkbox"]{
+            float: left;
+            width: 10%;
+            margin: 4px 0 0;
+        }
+        label{
+            float: left;
+            width: 90%;
+        }
+      }
     }
     .calculatedSocieties{
         position: absolute;
